--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             alt="Profile Picture" class="profile-img">
          <h2 class = "name">Ahmed Ali</h2>
          <p class = "age"> Age: 28</p>
+         <p class = "city">City: Kuala Lumpur</p>
+         <p class = "city">Nationality: Malaysian</p>
+         <p class  = "phone_number">Phone Number : 99011830382</p>
+         
 
     </div>
 
