added profession, hobbies, and summary

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
          <p class = "age"> Age: 28</p>
          <p class = "city">City: Kuala Lumpur</p>
          <p class = "city">Nationality: Malaysian</p>
-         <p class  = "phone_number">Phone Number : 99011830382</p>
-         
+         <p class  = "profession">Profession: Software Engineer</p>
+         <p class  = "hobbies">Hobbies: Reading</p>
+         <p class  = "summary">Summary : Loren ipsum blabla</p>
 
     </div>
 
