added two buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
          <p class = "city">Nationality: Malaysian</p>
          <p class  = "profession">Profession: Software Engineer</p>
          <p class  = "hobbies">Hobbies: Reading</p>
-         <p class  = "summary">Summary : Loren ipsum blabla</p>
+         <p class  = "summary">Summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac felis in
+            mauris ultricies efficitur.</p>
+        <div class = "buttons">
+            <button class="btn">Contact</button>
+            <button class="btn">Follow</button>
+        </div>
 
     </div>
 
